backend/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: taskflow-backend
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 5000
      targetPort: 5000
      name: http
