backend/service-tasks.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-svc
  namespace: taskflow-backend
  labels:
    app: tasks
spec:
  type: ClusterIP
  selector:
    app: tasks
  ports:
    - port: 8081
      targetPort: 8081
      name: http
